# duplicatefilefinder

./: Cargo.toml  README.md
src/: main.rs
src/core/: hashing.rs  mod.rs  models.rs  scanner.rs
src/gui/: app.rs
src/providers/: google_drive.rs  icloud.rs  local_fs.rs  mod.rs
